# PitchPerfect

./: BROWSER_ANALYSIS.md  COMPONENT_ANALYSIS.md  README.md  README_FULLSTACK.md  package-lock.json  package.json  tailwind.config.js
app/: globals.css  layout.js  page.js  page.md
backend/: .gitignore  FFMPEG_SUMMARY.md  FFmpeg_Installation_Guide.md  README.md  README_Everything.md  acoustic_features.py  backend_transcribe.py  check_ffmpeg.py  component_test_results_20250708_140945.json  direct_transcribe.py  fallback_transcribe.py  install_ffmpeg.py  llm_feedback.py  milestone_report.json  pyproject.toml  pytorch_transcribe.py  run_tests.py  setup_ffmpeg.py  start_server.py  test_api_upload.py  test_milestones.py  test_pipeline.py  test_sample_wav.py  text_analysis.py  transcribe.py  transcription.py  verify_setup.py
backend/.github/workflows/: ci.yml  deploy.yml
backend/backend/: .gitignore  Dockerfile  README.md  requirements.txt
backend/backend/app/: __init__.py  config.py  main.py
backend/backend/app/models/: speech_analysis.py
backend/backend/app/routers/: __init__.py  audio.py
backend/backend/app/services/: __init__.py  acoustic_features.py  llm_feedback.py  pipeline.py  report_generator.py  text_analysis.py  transcription.py
backend/backend/app/tests/: test_llm_feedback.py  test_report_generator.py
backend/backend/models/: response.py
backend/backend/tests/: __init__.py  mock_config.py  test_acoustic_features.py  test_text_analysis.py  test_transcription.py
backend/backend/utils/: __init__.py  common.py
backend/tests/: test_modules.py
(+46 files in other folders)
